--- a/templates/anon_user.html
+++ b/templates/anon_user.html
@@ -89,7 +89,7 @@
     <!-- MAIN BODY -->
     <div class="container">
       <div class="col-sm-12 no-padding">
-        <div class="col-sm-12 col-md-8 no-padding">
+        <div class="col-sm-12 col-md-12 no-padding">
           <!---->
           <section class="prlg-panel">
             <div class="main-user">
@@ -99,6 +99,22 @@
               <div class="info">
                 <div class="display-name">The user display name</div>
                 <div class="username">@userExtraLonghandle</div>
+                <div class="currently-reading section">
+                  <div class="description">Currently reading:</div>
+                  <div class="book-list">
+                    <div class="book">
+                      <div class="icon"><img src="../img/user_dark.png"></div>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">The Title of the Book I am Reading</a>
+                        </div>
+                        <div class="author">
+                          <a href="#"> Author One</a>, <a href="#">Author Two</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </section>
