Empty current reading on my library

--- a/css/library.less
+++ b/css/library.less
@@ -3,6 +3,14 @@
   margin-left: 22px;
   margin-top: 20px;
 
+  .empty-list {
+    margin-bottom: 10px;
+    .description {
+      font-size: 18px;
+      color: @handler-color;
+    }
+  }
+
   .description {
     font-size: 14px;
   }
@@ -30,6 +38,7 @@
     }
 
     .content {
+      margin-bottom: 10px;
       overflow: hidden;
       .book {
         margin-top: 10px;
