--- a/templates/user_library.html
+++ b/templates/user_library.html
@@ -90,6 +90,13 @@
     <div class="container">
       <div class="col-sm-12 no-padding">
         <div class="col-sm-12 col-md-8 no-padding">
+          <section class="prlg-panel">
+            <div class="my-currently-reading">
+              <div class="empty-list">
+                <div class="description">Your reading list is empty!</div>
+              </div>
+            </div>
+          </section>
           <!---->
           <section class="prlg-panel">
             <div class="my-currently-reading">
