--- a/css/book.less
+++ b/css/book.less
@@ -24,10 +24,18 @@
     margin-top: 15px;
     border-top: 1px solid #e4e4e4;
 
+    @media @phone {
+      justify-content: space-around;
+    }
+
     .action {
       margin-right: 15px;
       margin-top: 15px;
       color: @prologes-icon-color;
+
+      @media @phone {
+        margin-right: 0px;
+      }
 
       &:hover,
       &:focus {
