Changed member section and added new club page

--- a/templates/admin_group.html
+++ b/templates/admin_group.html
@@ -315,16 +315,15 @@
 				<div class="holder" id="tab-members-holder">
 					<!-- List the members and button to invite people/join';/>...... -->
 					<section class="members" id="members-component">
-						<div class="section-header">
-							Members
+						<div class="section-header underlined">
+							<h3>Members</h3>
 						</div>
 						<div class="info">
 							<!-- list -->
 							<div class="membership">
 								<div class="member">
-									<div class="role">You are a member</div>
-									<div class="actions">
-										<button class="btn">LEAVE CLUB</button>
+									<div class="role">
+										<button class="btn">You are a MEMBER</button>
 									</div>
 								</div>
 								<div class="guest">
@@ -392,8 +391,11 @@
 								</div>
 							</div>
 						</div>
-						<div class="actions">
-							<button class="main-btn btn">Invite</button>
+						<div class="member-actions">
+							<div class="actions">
+								<div class="action invite"><button class="main-btn btn">Invite</button></div>
+								<div class="action leave"><a href="#">Leave club</a></div>
+							</div>
 						</div>
 					</section>
 				</div>
