--- a/css/group.less
+++ b/css/group.less
@@ -338,6 +338,15 @@
     font-size: 18px;
     margin-top: 20px;
     margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+
+    h3 {
+      width: 60%;
+      border-bottom: solid 5px @main-color;
+      font-size: 20px;
+      padding-bottom: 8px;
+    }
   }
 
   .actions {
@@ -345,6 +354,25 @@
     flex-grow: 1;
     justify-content: center;
     margin-top: 10px;
+
+    .action {
+      margin-top: 10px;
+      text-align: center;
+    }
+  }
+
+  .member-actions {
+    .actions {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .invite .btn {
+      width: 40%;
+    }
+    .leave {
+      margin-top: 10px;
+    }
   }
 
   .membership {
@@ -356,7 +384,7 @@
     }
     .member {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       .actions {
         //
       }
@@ -597,4 +625,112 @@
       margin-right: 0;
     }
   }
+}
+
+// Book club home styles
+.my-bookclubs {
+
+  .section-header {
+    font-size: 22px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+
+    h3 {
+      width: 40%;
+      border-bottom: solid 5px @main-color;
+      font-size: 20px;
+      padding-bottom: 8px;
+    }
+  }
+
+  .bookclubs {
+
+    .bookclub {
+      display: flex;
+      padding: 15px;
+      position: relative;
+
+      a {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        text-decoration: none;
+        z-index: 10;
+      }
+
+      &:hover, &:focus {
+        background-color: @custom-panel-bg-hover;
+      }
+
+      .icon {
+        img {
+          height: 60px;
+          width: 60px;
+          border-radius: 50%;
+        }
+      }
+
+      .info {
+        margin-left: 8px;
+        margin-top: 5px;
+
+        .name {
+          color: @name-color;
+          font-size: 18px;
+          font-weight: 500;
+          margin-bottom: 3px;
+        }
+
+        .handle {
+          color: @handler-color;
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+.new-group {
+  padding: 10px;
+  margin-top: 35px;
+  
+  .icon {
+    margin-top: 10px;
+    margin: auto;
+
+    img {
+      height: 120px;
+      width: 120px;
+      border-radius: 50%;
+    }
+  }
+
+  .section-header {
+    margin-top: 15px;
+    font-size: 26px;
+  }
+
+  .section-instructions {
+    padding: 10px;
+  }
+
+  .new-form {
+    padding: 10px 20px;
+
+    .actions {
+      margin-top: 10px;
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
+
+.section-header {
+  text-align: center;
+  color: @title-color;
+  font-weight: 600;
 }
