Empty description in groups and filtering out

--- a/css/styles.less
+++ b/css/styles.less
@@ -1,6 +1,8 @@
 
 @main-text-color: '';
 
+@img-dir: '/prologes/img';
+
 @main-color: #173e43;
 @contrasting-color: #3fb0ac;
 @light-color: #fae596;
@@ -533,4 +535,8 @@ body {
 	.controls:not(.not-expanded) .more {
 		display: none;
 	}
+}
+
+.filtered-out {
+	display: none !important;
 }
