--- a/css/group.less
+++ b/css/group.less
@@ -184,12 +184,33 @@
       }
     }
 
+    .description.empty .expandable {
+      display: none;
+    }
+
     .description {
       margin-top: 20px;
       margin-right: 20px;
 
       @media @phone {
         margin-left: 18px;
+      }
+
+      .empty {
+        padding: 10px;
+        padding-top: 0;
+        margin-bottom: 10px;
+        .frame {
+          cursor: pointer;
+          height: 100px;
+          border: 2px dashed #e4e4e4;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          color: #e4e4e4;
+          font-weight: 600;
+          font-size: 14px;
+        }
       }
 
       .editable-control {
@@ -460,6 +481,44 @@
 .side-tab-panel {
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.group-reading.empty .background {
+  background: linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)), url('@{img-dir}/easychair_ink_greyed.png');
+  background-size: 100% 100%;
+}
+
+.group-wishlist.empty .background {
+  background: linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)), url('@{img-dir}/wishlist_ink_greyed.png');
+  background-size: 100% 100%;
+}
+
+.group-library.empty .background {
+  background: linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)), url('@{img-dir}/library_ink_greyed.png');
+  background-size: 100% 100%;
+}
+
+.tab-content {
+  .empty {
+    height: 280px;
+    padding: 30px;
+  
+    .background {
+      height: 100%;
+      width: 100%;
+  
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+  
+      span {
+        font-size: 18px;
+        font-weight: 400;
+      }
+    }
+  }
 }
 
 .group-reading {
