--- a/css/book.less
+++ b/css/book.less
@@ -19,7 +19,7 @@
   .actions {
     display: flex;
     justify-content: flex-end;
-    font-size: 56px;
+    font-size: 46px;
     margin-bottom: 10px;
     margin-top: 15px;
     border-top: 1px solid #e4e4e4;
@@ -359,6 +359,109 @@
     justify-content: center;
     .main-btn {
       width: 33%;
+    }
+  }
+}
+
+.main-book--sidebar {
+  .prlg-panel {
+    margin-bottom: 30px;
+  }
+  .header {
+    padding: 8px;
+    font-size: 18px;
+    color: @main-color;
+    text-align: center;
+    font-weight: 600;
+  }
+  .toggable-header {
+    font-weight: 600;
+  }
+  .club-list {
+    .club {
+      &:hover {
+        background-color: @custom-panel-bg-hover;
+        text-decoration: none;
+      }
+      border-radius: 5px;
+      display: flex;
+      padding: 6px;
+      margin-top: 8px;
+      .icon {
+        img {
+          border-radius: 50%;
+          width: 60px;
+          height: 60px;
+        }
+      }
+  
+      .info {
+        display: flex;
+        flex-direction: column;
+        margin-left: 5px;
+        .display-name {
+          color: @name-color;
+          font-size: 18px;
+        }
+        .handle {
+          margin-top: 3px;
+          color: @handler-color;
+          font-size: 14px;
+        }
+      }
+
+    }
+  }
+}
+
+.bookstore-catalogue {
+  // max-height: 450px;
+  // overflow-y: auto;
+  overflow-x: hidden;
+  .item {
+    &:hover {
+      text-decoration: none;
+      cursor: pointer;
+      background-color: @custom-panel-bg-hover;
+    }
+    border-radius: 5px;
+    margin-top: 8px;
+    padding: 8px;
+    display: flex;
+
+    .icon {
+      img {
+        width: 60px;
+      }
+    }
+
+    .info {
+      width: 100%;
+      margin-left: 10px;
+      display: flex;
+      flex-direction: column;
+      .title {
+        font-size: 16px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        max-width: 188px;
+      }
+      .price {
+        font-size: 18px;
+        color: #3fb0ac;
+      }
+
+      .provider {
+        // position: relative;
+        img {
+          // position: absolute;
+          // bottom: 0;
+          // right: 0;
+          height: 24px;
+          width: auto;
+        }
+      }
     }
   }
 }
