--- a/css/styles.less
+++ b/css/styles.less
@@ -540,3 +540,26 @@ body {
 .filtered-out {
 	display: none !important;
 }
+
+.toggable.open {
+	.on-closed {
+		display: none;
+	}
+}
+
+.toggable:not(.open) {
+	.on-open {
+		display: none;
+	}
+}
+
+.toggable-header {
+	color: @main-color;
+	font-size: 20px;
+	font-weight: 500;
+	padding: 8px;
+	margin-left: 5px;
+	margin-right: 5px;
+	display: flex;
+	justify-content: space-between;
+}
